--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
+        arch: ['--x64', '--arm64']
 
     steps:
       - name: Check out Git repository
@@ -17,11 +18,13 @@ jobs:
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v4
         with:
-          node-version: current
+          node-version: 'lts/-n'
+          yarn-version: 'latest'
+          npm-version: 'latest'
           cache: 'npm'
 
       - name: Build/Release Electron app
-        uses: samuelmeuli/action-electron-builder@v1
+        uses: imyanice/action-electron-builder@v1.7.0
         with:
           # GitHub token, automatically provided to the action
           # (No need to define this secret in the repo settings)
