--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "author": {
     "name": "Oleg Shulyakov",
+    "email": "olegshulyakov@users.noreply.github.com",
     "url": "https://github.com/olegshulyakov"
   },
   "license": "GPL-3.0",
