Update Electron build parameters

--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     },
     "linux": {
       "icon": "assets/icon.png",
+      "category": "Network",
       "target": [
+        "tar.gz",
+        "deb",
         "rpm"
       ]
     }
